<resources>
    <string name="app_name">GameCym</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="failed_login">Authentication failed. Please try again</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="register_request_question">User not found would you like to register with this email and password?</string>
    <string name="bad_format_test">One of the fields contains invalid characters</string>
    <string name="field_not_empty">This field cannot be empty</string>
    <string name="pref_username_key">UsernameLoginKey</string>
    <string name="pref_password_key">PasswordLoginKey</string>
    <string name="pref_file_name">AppPrefs</string>
    <string name="age_text">Age</string>
    <string name="gender_text">Gender</string>
    <string name="weight_text">Weigh (kg)</string>
    <string name="height_text">Height (cm)</string>
    <string name="save_profile_text">Save profile</string>
    <string name="SERVER_ADDRESS">http://192.168.1.30:11000</string>
    <string name="ENC_KEY">QtWr8DBhYZJzh4mC</string>
    <string name="logout">Logout</string>
    <string name="edit_bio">Edit Biostats</string>
    <string name="google_app_id">417245984155</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="day_text">Day</string>
    <string name="XpEarnedLeaderboardID">CgkIm-uxrpIMEAIQDw</string>
</resources>
